syntax = "proto3";

import "transaction.proto";
package org.mos.mcore.model;

message BlockInfo {
	BlockHeader header = 1;
	BlockBody body = 2;
	BlockMiner miner = 3;
	int32 version = 4;
}

message BlockHeader {
	bytes hash = 1;
	bytes parentHash = 2;
	int64 height = 3;
	bytes stateRoot = 4;
	bytes receiptRoot = 5;
	int64 timestamp = 6;
	bytes extraData = 7;
	repeated bytes txHashs = 8;
	repeated int32 txexecbulkindex = 9;
	int32 txexecbulksize = 10;
	int64 totaltriecount = 11;
	int64 totaltriesize = 12;
	bytes evfsRoot = 13;
}

message BlockBody {
	repeated TransactionInfo txs = 1;
}

message BlockMiner {
	bytes address = 1;
	bytes reward = 2;
	string nid = 3;
	string term = 4;
	string bits = 5;
}